# TaijiOS

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  vercel.json  yi_learning_engine.py
.github/workflows/: ci.yml
aios/: __init__.py
aios/gateway/: __main__.py  app.py  config.py  football_data.py  providers.py  tasks.py
coherent_engine/core/: aligner.py  cache.py  executor.py  orchestrator.py  tweener.py
coherent_engine/modules/: background.py  base.py  camera.py  expression.py  mouse_flow.py  pose.py  validator.py  voice.py
coherent_engine/pipeline/: __init__.py  _echocore_bridge.py  experience_index.json  experience_quality.py  experience_quality_latest.json  experience_retrieval.py  job_runner.py  llm_client.py  planner.py  prompt_builder.py  prompt_mappings.json  reason_codes.py
coherent_engine/tests/: conftest.py  full_module_cv_test.py  full_module_test.py  real_mouse_flow_validation.py  test_core.py  test_echocore_bridge.py  test_experience_quality.py  test_experience_retrieval.py  test_job_runner.py  test_modules.py  test_mouse_flow.py  test_pipeline.py  test_real_flow.py
demo/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
examples/: success_lift_test.py  success_lift_v2.py
examples/quickstart_output/: quickstart_events.json  quickstart_evidence.json  quickstart_trace.json
github_learning/: __init__.py  __main__.py  analyzer.py  digester.py  discoverer.py  gate.py  learning_snapshot.py  manifest.py  solidifier.py
github_learning/data/: analyses.jsonl  (+8 more)
rules/: testing.md
worker/: __main__.py
(+16 files in other folders)
