[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "taijios"
version = "0.1.0"
description = "AI Operating System — self-improving, autonomous agent framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "httpx>=0.24",
    "numpy>=1.24",
    "fastapi>=0.100",
    "uvicorn>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
